--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
     "apisauce": "^1.1.1",
+    "formik": "^2.0.4",
     "i18next": "^19.0.0",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
