--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
       "<rootDir>/__tests__/setup/",
       "<rootDir>/__tests__/redux/store.js",
       "<rootDir>/__tests__/redux/utils.js",
-      "<rootDir>/__tests__/responses/"
+      "<rootDir>/__tests__/responses/",
+      "<rootDir>/__tests__/redux/items/responseExamples"
     ],
     "transformIgnorePatterns": [
       "/node_modules/@react-native-community/async-storage/(?!(lib))"
